# Physical-Design-for-Nanometer-ICs

./: .gitattributes  README.md
HW1/: README.md  multi_nonzero_fm.cpp  multi_orig_fm.cpp  nonzero_fm.cpp  orig_fm.cpp
HW1/checker/: checker_linux  readme.txt
HW2/: CMakeLists.txt  README.md  check.py
HW2/input_pa2/: 2.block  ami33.block  apte.nets
HW3/: Makefile  README.md  readme.txt
HW3/src/: CMakeLists.txt
HW4/: CMakeLists.txt  README.md
HW4/arearouting/: case100000  case4  case7
hw1/: README.md  makefile  multi_nonzero_fm.cpp  multi_orig_fm.cpp  readme.txt  report.docx
hw2/: CMakeCache.txt  CMakeLists.txt  Makefile  check.py  cmake_install.cmake  logs  main  plot.py  readme.txt  report.doc  run.sh
hw2/input_pa2/: 1.block  3.block  3.nets  ami33.nets  ami49.block  ami49.nets  apte.block  hp.block  hp.nets  xerox.block  xerox.nets
hw2/logs/: ami33_1  ami33_2  ami33_3  ami33_4  ami49_1  ami49_2  ami49_3  ami49_4  apte_1  apte_2  apte_3  apte_4  hp_1  hp_2  hp_3  hp_4  xerox_1  xerox_2  xerox_3  xerox_4
hw2/result/: testing.rpt
hw2/src/: '  floor_plan.hpp  main.cpp  tree.hpp
hw3/: Makefile  readme.txt  report.docx
hw3/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dis.txt  ibm01-cu85.lg.plt  ibm02-cu90.lg.plt  ibm05.lg.pl  ibm05.lg.plt  legalizer  main.cpp  run.sh
hw3/src/Gnuplot/: GnuplotMatrixPlotter.h  Makefile  cmake_install.cmake
hw3/src/Legalizer/: CMakeLists.txt  Legal.cpp  Legal.h  Makefile  cmake_install.cmake
hw3/src/Parser/: BookshelfParser.cpp  BookshelfParser.h  CMakeLists.txt  Makefile  cmake_install.cmake
hw3/src/PlaceCommon/: CMakeLists.txt  Makefile  ParamPlacement.h  Util.cpp  cmake_install.cmake
hw3/src/Placement/: Makefile  Module.h  Pin.h  Placement.cpp  Placement.h  Row.cpp  Row.h  cmake_install.cmake
hw3/src/benchmarks/ibm01/: ibm01-cu85.gp.pl
hw3/src/benchmarks/ibm02/: ibm02-cu90.gp.pl
hw4/: CMakeLists.txt  readme.txt
(+46 files in other folders)
